<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ElTeuParlament</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--Main Menu !-->
    <string name="main_menu_follow">Seguint</string>
    <string name="main_menu_today">Actualitat</string>
    <string name="main_menu_composition">Composició</string>
    <string name="main_menu_activities">Activitats</string>
    <string name="main_menu_commissions">Comissions</string>
    <string name="main_menu_calendar">Calendari</string>



</resources>
